[package]
name = "xdu"
version = "0.1.2"
authors = ["Ziyan \"Jerry\" Chen <jerryc443@gmail.com>"]
edition = "2018"
description = "A naive and cross-platform implementation of Disk Usage."
#documentation = "https://docs.rs/???"
readme = "README.md"
#homepage = "https://???.rs/"
repository = "https://github.com/jerryc05/xDU"
license = "GPL-3.0-or-later"
keywords = ["du"]
categories = [
    "command-line-utilities",
    "filesystem"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
